--- a/sobre.html
+++ b/sobre.html
@@ -327,7 +327,7 @@
             <h1>
                 _______________________
             </h1>
-            <form id="questionario" name="questionario" method="post" action="resposta.html">
+            <form action="resposta.html">
                 <img src="comunicações.jfif" width="280" height="200">
                 <p>
                     1) Observe o simbolo acima, e assinale a arma que ele representa:
