--- a/sobre.html
+++ b/sobre.html
@@ -327,7 +327,7 @@
             <h1>
                 _______________________
             </h1>
-            <form action="resposta.html">
+            <form id="questionario" name="questionario" action="resposta.html">
                 <img src="comunicações.jfif" width="280" height="200">
                 <p>
                     1) Observe o simbolo acima, e assinale a arma que ele representa:
@@ -439,7 +439,7 @@
                     _______________________
                 </h1>
 
-                <input type="submit" name="enviar" id="enviar" value="Enviar" />
+                <input type="submit" value="Enviar" />
             </form>
             <h2>Novas tecnologias.</h2>
 
